--- a/strech.html
+++ b/strech.html
@@ -24,16 +24,17 @@
 </head>
 <body>
 
+
+
 <div class="row">
-<!--HEADER-->
-<div class="header">
-    <h1 class="c">Puppy Tailrd</h1>
-</div>
+    <!--    Header-->
+    <div class="header">
+        <h1 class="c">Puppy Tailrd</h1>
+    </div>
 
-
-<!--NAV BAR-->
+    <!--    Nav Bar-->
     <div id="navbar">
-        <a class="active" href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
         <a href="https://www.etsy.com/shop/PuppyTAILrd?ref=search_shop_redirect">
             <i class="fas fa-store"></i> Shop</a>
         <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
@@ -43,51 +44,41 @@
 </div>
 
 
-<!--SIDE NAV-->
 <div class="row">
     <div class="col-2">
+        <!--Side nav     -->
         <div id="mySidenav" class="sidenav">
             <a id="fleece" href="fleece.html">Fleece</a>
             <a id="stretch" href="strech.html">Stretch Cotton</a>
         </div>
     </div>
 
-
-<!--    Content-->
-    <div class="col-10">
+    <div class="col-"10>
+        <!--    Content-->
         <div class="content">
-            <h1>Products</h1>
+
+<!--            Title-->
+            <h1>Stretch Cotton</h1>
             <div class="row">
-                <a class="gPic" href="car-pic.html" ><img src="Cartoon.jpg"></a>
-                <a class="gPic" href="c-camo-pic.html" ><img src="warmy.jpg"></a>
                 <a class="gPic" href="tux-pic.html" ><img src="pt%20tux.jpg"></a>
                 <a class="gPic" href="ny-pic.html" ><img src="new%20yorker%20side.jpg"></a>
-            </div>
-            <div class="row">
-
-            </div>
-            <div class="row">
-                <a class="gPic" href="c-hip-pic.html"><img src="pt%20classic%20hip.jpg"></a>
-                <a class="gPic" href="g-camo-pic.html"><img src="g-camo.jpg"></a>
                 <a class="gPic" href="p-pow-pic.html"><img src="pt%20puppy%20power.jpg"></a>
                 <a class="gPic" href="dew-pic.html"><img src="pt%20dew%20drop.jpg"></a>
             </div>
             <div class="row">
-
+                <a class="gPic" href="c-hip-pic.html"><img src="pt%20classic%20hip.jpg"></a>
             </div>
-
-<!--            Social Links-->
             <div class="row">
                 <a class="so-lnk" href="https://www.facebook.com/index.php?next=https%3A%2F%2Fwww.faceb
-            ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
+        ook.com%2Fhome.php"><i class="fab fa-facebook-square"></i></a>
                 <a class="so-lnk" href="https://www.pinterest.com/search/pins/?q=homepage&rs=typed&term_
-            meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
+        meta[]=homepage%7Ctyped"><i class="fab fa-pinterest"></i></a>
                 <a class="so-lnk" href="https://www.tumblr.com/"><i class="fab fa-tumblr-square"></i></a>
                 <a class="so-lnk" href="https://www.linkedin.com/"><i class="fab fa-linkedin"></i></a>
-                <!--<a class="icon" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
-                <!--<a class="icon" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
-                <!--<a class="icon" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
-                <!--<a class="icon" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
+                <!--<a class="so-lnk" href="https://twitter.com/"><i class="fab fa-twitter-square"></i></a>-->
+                <!--<a class="so-lnk" href="https://www.snapchat.com/"><i class="fab fa-snapchat"></i></a>-->
+                <!--<a class="so-lnk" href="https://www.reddit.com/"><i class="fab fa-reddit"></i></a>-->
+                <!--<a class="so-lnk" href="https://www.flickr.com/"><i class="fab fa-flickr"></i></a>-->
             </div>
 
 <!--            Bottom Logo-->
@@ -95,5 +86,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
